# hermes_mempalace_routing

./: PASTE_READY_IMPLEMENTATION_PROMPT.md  README.md  hermes-agent  mempalace  pyproject.toml
.jules/: bolt.md
docs/: sqlite-daily-driver-rollout.md
examples/: host_hooks_example.py
fixtures/eval/: 01_retrieval.json  02_tokenizer.json  03_ops.json  04_mempalace_retrieval.json  05_sprint41_polish.json
hermes_mempalace_routing/: __init__.py  builtin_memory_shim.py  cli.py  config.py  conflicts.py  context_engine.py  eval.py  host_hooks.py  mempalace_adapter.py  mempalace_ingest.py  mempalace_scope.py  migrations.py  models.py  plugin.py  provider.py  redaction.py  routing.py  storage.py  storage_sqlite.py  tokenizer.py
reports/: orderking-pos-observer-report.md
scripts/: live_smoke.py  smoke.sh  test.sh
tests/: bench_routing.py  test_cli.py  test_config_validation.py  test_conflicts.py  test_context_engine.py  test_eval.py  test_example_script_import.py  test_examples.py  test_hooks.py  test_host_hooks.py  test_mempalace_first.py  test_plugin_integration.py  test_provider.py  test_redaction.py  test_routing.py  test_storage_sqlite.py  test_storage_transaction.py  test_tokenizer.py
